# understanding-slam-raylib-wasm

./: .gitignore  AGENTS.md  CMakeLists.txt  INSTRUCTIONS.md  LICENSE  README.md  package-lock.json  package.json
.agents/skills/coding-orchestrator/: SKILL.md
.agents/skills/coding-orchestrator/agents/: openai.yaml
.agents/skills/cpp-wasm-engineer/: SKILL.md
.agents/skills/cpp-wasm-engineer/agents/: openai.yaml
.agents/skills/cpp-wasm-engineer/references/: debugging-optimization.md  edge-cases.md  runtime-interop.md  source-index.md  toolchain-build.md
.agents/skills/discover-wasm/: SKILL.md
docs/: wsl-networking.md
scripts/: build_wasm.sh  build_wasm_diff_trace.sh  check_wasm_prereqs.sh  e2e_compare_ref2_vs_raylib.py  ensure_emsdk_env.sh  print_access_ip.sh  run_triad_e2e.sh  run_wasm_chrome.sh  setup_raylib_wasm.sh  setup_wasm_env.sh  wasm_e2e_smoke.sh  wasm_fps_telemetry.sh
src/: main.cpp
src/app/: AssetPaths.cpp  AssetPaths.h  Config.h  HeadlessSmoke.cpp  HeadlessSmoke.h  SlamApp.cpp  SlamApp.h
src/audio/: SoundController.cpp  SoundController.h
src/core/: OccupancyGridMap.cpp  OccupancyGridMap.h  SimulatedLidar.cpp  SimulatedLidar.h  Types.h  WorldGrid.cpp  WorldGrid.h
src/input/: Motion.cpp  Motion.h
src/render/: Renderer.cpp  Renderer.h
src/tools/: DifferentialTrace.cpp  StaticFileServer.cpp
src/ui/: UiControls.cpp  UiControls.h
src/world/: WorldLoader.cpp  WorldLoader.h
tasks/: lessons.md  raylib-cpp-module-map.md  ref1-migration-patterns.md  ref2-architecture-scope.md  todo.md  wasm-prerequisites.md
tasks/reports/: e2e-triad-20260221-024855.md  e2e-triad-20260221-025038.md  error-report.md  wasm-input-audio-fix-20260220.md
tests/: asset_paths_tests.cpp  audio_tests.cpp  config_tests.cpp  core_tests.cpp  motion_tests.cpp  render_tests.cpp  ui_tests.cpp  world_loader_tests.cpp
tests/data/: e2e_wasd_sequence.txt  world_grid_120x80.txt
web/: emshell.html
